--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,1 +1,3 @@
-<p>experiencia works!</p>,
+<div class="h-100 w-full bg-radial from-[#eacb46] to-[#ffb74c]">
+  <h1 class="text-3xl font-bold underline">Hello world!</h1>
+</div>
