--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,13 @@
-<h1 class="text-3xl font-bold underline">Hello world!</h1>
+<header
+  class="h-screen w-full bg-[#81e1ff] flex flex-col items-center justify-center text-center"
+>
+  <img src="images/afg.svg" alt="logo-header" class="w-60" />
+  <h1 class="text-6xl font-bold">Adrián Ferradás Gutiérrez</h1>
+  <div
+    class="px-2 py-1 rounded-2xl bg-[radial-gradient(circle_at_top,_#eacb46,_#ffb74c)]"
+  >
+    <h3 class="text-2xl font-bold">Desarrollador Web</h3>
+  </div>
+</header>
+
+<img src="images/nube.png" alt="nube-fondo1" class="w-60" />
