--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,3 +1,49 @@
-<div class="h-100 w-full bg-radial from-[#eacb46] to-[#ffb74c]">
-  <h1 class="text-3xl font-bold underline">Hello world!</h1>
-</div>
+<section
+  class="relative h-600 w-full bg-radial from-[#eacb46] to-[#ffb74c] z-0"
+>
+  <!-- Cuadraditos -->
+  <img
+    src="images/cuadraditos.svg"
+    alt="cuadraditos decorativos"
+    class="absolute top-0 left-0 w-80 -z-10 pointer-events-none"
+  />
+  <img
+    src="images/cuadraditos.svg"
+    alt="cuadraditos decorativos"
+    class="absolute bottom-0 right-0 w-80 -z-10 rotate-180 pointer-events-none"
+  />
+
+  <!-- Contenido -->
+  <div class="relative z-10 text-center">
+    <h1 class="text-8xl font-bold underline">Experiencia</h1>
+  </div>
+
+  <!-- Jostari -->
+  <!-- <div
+    class="w-100 h-auto h-min-10 bg-claro border-3 border-oscuro sombra-exp m-5"
+  >
+    <div class="w-full h-auto py-1 bg-amarillo flex">
+      <div class="w-14 h-14 rounded-full overflow-hidden bg-claro m-2">
+        <img
+          src="images/afg.svg"
+          alt="Fsto"
+          class="w-full h-full object-contain"
+        />
+      </div>
+      <div class="">
+        <p class="font-bold">Jostari</p>
+        <p class="">2023-2024</p>
+      </div>
+    </div>
+    <hr class="h-[3px] bg-oscuro" />
+    <p class="p-2">
+      Durante mi periodo en Jostari, me encargué de resolver incidencias
+      técnicas, optimizar la gestión de pedidos y devoluciones mediante la
+      plataforma <b>WordPress</b> y crear diseños gráficos con
+      <b>Illustrator</b>.
+    </p>
+  </div> -->
+  <!-- Fin Jostari -->
+
+  <!-- PRUEBAS -->
+</section>
