--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 
+@theme {
+  --color-claro: #ececec;
+  --color-oscuro: #1d1d1b;
+  --color-amarillo: #ecc846;
+}
+
+/* HAY QUE SEPARAR ESTO */
 h1,
 h2,
 h3,
@@ -9,6 +16,43 @@ h5,
 h6 {
   font-family: "Space Grotesk", sans-serif;
 }
-/* .bg-amarillo {
-  background-image: radial-gradient(circle at center, #eacb46, #ffb74c);
-} */
+
+@keyframes nube {
+  0% {
+    left: -50%;
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  88% {
+    opacity: 1;
+  }
+  100% {
+    left: 105%;
+    opacity: 0;
+  }
+}
+
+.animate-nube {
+  animation: nube 15s linear infinite;
+}
+
+@media (max-width: 768px) {
+  .animate-nube {
+    animation-duration: 10s;
+  }
+}
+
+@media (max-width: 425px) {
+  .animate-nube {
+    animation-duration: 5s;
+  }
+}
+
+/* Experiencia */
+.sombra-exp {
+  box-shadow: -10px 10px;
+}
+
+/* PRUEBAS */
