--- a/src/app/components/experiencia/pruebas/pruebas.component.html
+++ b/src/app/components/experiencia/pruebas/pruebas.component.html
@@ -1,23 +1,5 @@
-<section
-  class="relative h-auto w-full bg-radial from-[#eacb46] to-[#ffb74c] z-0"
->
-  <!-- Cuadraditos -->
-  <img
-    src="images/cuadraditos.svg"
-    alt="cuadraditos decorativos"
-    class="absolute top-0 left-0 w-80 -z-10 pointer-events-none"
-  />
-  <img
-    src="images/cuadraditos.svg"
-    alt="cuadraditos decorativos"
-    class="absolute bottom-0 right-0 w-80 -z-10 rotate-180 pointer-events-none"
-  />
-
-  <!-- Contenido -->
-  <div class="relative z-10 text-center">
-    <h1 class="text-8xl font-bold underline">Experiencia</h1>
-  </div>
-
+<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+<div class="bg-green-400 w-full min-h-100 h-auto -z-0">
   <!-- Jostari -->
   <div class="timeline">
     <div class="container left">
@@ -111,8 +93,10 @@
           entorno de compra intuitivo y fiable.
         </p>
       </div>
-
-      <!-- ---- -->
     </div>
+
+    <!-- ---- -->
   </div>
-</section>
+</div>
+<div class="border-3 border-red-500 w-[30px] h-20 bg-blue-300 m-auto"></div>
+<p class="text-center">|</p>
