--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -5,24 +5,25 @@
   <img
     src="images/cuadraditos.svg"
     alt="cuadraditos decorativos"
-    class="absolute top-0 left-0 w-80 -z-10 pointer-events-none"
+    class="absolute top-0 left-0 w-80 -z-10 pointer-events-none opacity-75"
   />
   <img
     src="images/cuadraditos.svg"
     alt="cuadraditos decorativos"
-    class="absolute bottom-0 right-0 w-80 -z-10 rotate-180 pointer-events-none"
+    class="absolute bottom-0 right-0 w-80 -z-10 rotate-180 pointer-events-none opacity-75"
   />
 
   <!-- Contenido -->
   <div class="relative z-10 text-center">
-    <h1 class="text-8xl font-bold underline">Experiencia</h1>
+    <h1 class="text-[16vw] md:text-8xl font-bold sombra-exp text-claro">
+      Experiencia
+    </h1>
   </div>
 
-  <!-- Jostari -->
   <div class="timeline">
     <div class="container left">
       <div
-        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-exp content z-10"
+        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
         <div class="w-full h-auto py-1 bg-amarillo flex">
           <div
@@ -39,7 +40,7 @@
             <p class="">2023-2024</p>
           </div>
         </div>
-        <hr class="h-[3px] bg-oscuro" />
+        <hr class="h-[3px] bg-oscuro border-oscuro" />
         <p class="p-2">
           Durante mi periodo en Jostari, gestioné la resolución de incidencias
           técnicas, optimicé los procesos de pedidos y devoluciones a través de
@@ -52,7 +53,7 @@
     <!-- Orvium -->
     <div class="container right">
       <div
-        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-exp content z-10"
+        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
         <div class="w-full h-auto py-1 bg-amarillo flex">
           <div
@@ -69,12 +70,11 @@
             <p class="">2024</p>
           </div>
         </div>
-        <hr class="h-[3px] bg-oscuro" />
+        <hr class="h-[3px] bg-oscuro border-oscuro" />
         <p class="p-2">
           Durante mi FCT, contribuí al desarrollo de una aplicación web y móvil
           utilizando <b>Angular</b> y <b>Tailwind</b>, además de utilizar
-          <b>MongoDB</b> como base de datos.
-          <br />
+          <b>MongoDB</b> como base de datos. <br /><br />
           Colaboré con el equipo en el uso de diversas tecnologías y
           herramientas a lo largo del proyecto.
         </p>
@@ -83,7 +83,7 @@
     <!-- Gven -->
     <div class="container left">
       <div
-        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-exp content z-10"
+        class="w-[100%] h-auto h-min-10 bg-claro border-3 border-oscuro sombra-box-exp content z-10"
       >
         <div class="w-full h-auto py-1 bg-amarillo flex">
           <div
@@ -100,19 +100,20 @@
             <p class="">2022-2023</p>
           </div>
         </div>
-        <hr class="h-[3px] bg-oscuro" />
+        <hr class="h-[3px] bg-oscuro border-oscuro" />
         <p class="p-2">
           Durante mi etapa en Gven, desarrollé una tienda online completamente
           funcional utilizando <b>WordPress</b>, integrando el sistema de pagos
           <b>Stripe</b> para facilitar transacciones seguras y eficientes.
-          <br />
+          <br /><br />
           Me encargué de la configuración técnica, la personalización del diseño
           web y la optimización de la experiencia de usuario, asegurando un
           entorno de compra intuitivo y fiable.
         </p>
       </div>
-
-      <!-- ---- -->
     </div>
   </div>
+  <div
+    class="bg-linear-to-t from-oscuro to-transparent w-full relative h-10"
+  ></div>
 </section>
