--- a/src/app/components/pruebas/pruebas.component.html
+++ b/src/app/components/pruebas/pruebas.component.html
@@ -1,6 +1,5 @@
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 <div class="bg-green-400 w-full min-h-100 h-auto -z-0">
-  <!-- Jostari -->
   <div class="timeline">
     <div class="container left">
       <div
@@ -21,7 +20,7 @@
             <p class="">2023-2024</p>
           </div>
         </div>
-        <hr class="h-[3px] bg-oscuro" />
+        <hr class="h-[3px] bg-oscuro border-oscuro" />
         <p class="p-2">
           Durante mi periodo en Jostari, gestioné la resolución de incidencias
           técnicas, optimicé los procesos de pedidos y devoluciones a través de
@@ -51,12 +50,11 @@
             <p class="">2024</p>
           </div>
         </div>
-        <hr class="h-[3px] bg-oscuro" />
+        <hr class="h-[3px] bg-oscuro border-oscuro" />
         <p class="p-2">
           Durante mi FCT, contribuí al desarrollo de una aplicación web y móvil
           utilizando <b>Angular</b> y <b>Tailwind</b>, además de utilizar
-          <b>MongoDB</b> como base de datos.
-          <br />
+          <b>MongoDB</b> como base de datos. <br /><br />
           Colaboré con el equipo en el uso de diversas tecnologías y
           herramientas a lo largo del proyecto.
         </p>
@@ -82,21 +80,20 @@
             <p class="">2022-2023</p>
           </div>
         </div>
-        <hr class="h-[3px] bg-oscuro" />
+        <hr class="h-[3px] bg-oscuro border-oscuro" />
         <p class="p-2">
           Durante mi etapa en Gven, desarrollé una tienda online completamente
           funcional utilizando <b>WordPress</b>, integrando el sistema de pagos
           <b>Stripe</b> para facilitar transacciones seguras y eficientes.
-          <br />
+          <br /><br />
           Me encargué de la configuración técnica, la personalización del diseño
           web y la optimización de la experiencia de usuario, asegurando un
           entorno de compra intuitivo y fiable.
         </p>
       </div>
     </div>
-
-    <!-- ---- -->
   </div>
+  <!-- ---- -->
 </div>
 <div class="border-3 border-red-500 w-[30px] h-20 bg-blue-300 m-auto"></div>
 <p class="text-center">|</p>
