--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,11 +7,12 @@
   <!-- Texto -->
   <img src="images/afg.svg" alt="logo-header" class="w-60" />
   <h1 class="text-6xl font-bold">Adrián Ferradás Gutiérrez</h1>
-  <div
-    class="px-2 py-1 rounded-2xl bg-[radial-gradient(circle_at_top,_#eacb46,_#ffb74c)]"
+
+  <h3
+    class="text-4xl font-bold text-[radial-gradient(circle_at_top,_#eacb46,_#ffb74c)]"
   >
-    <h3 class="text-2xl font-bold">Desarrollador Web</h3>
-  </div>
+    Desarrollador Web
+  </h3>
 </header>
 <!-- Degradado Azul-Amarrillo -->
 <div class="bg-[#81e1ff]">
