--- a/src/app/components/pruebas/pruebas.component.css
+++ b/src/app/components/pruebas/pruebas.component.css
@@ -1,108 +1,172 @@
-.sombra-exp {
-  box-shadow: -4px 4px #1d1d1b;
+h3 {
+  font-size: clamp(1rem, 3vw, 2rem);
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #ececec;
-}
-
-.timeline {
-  position: relative;
-  width: 100%;
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 100px 0;
-}
-
-/* Linea Y */
-.timeline::after {
-  content: "";
+/* General */
+.card {
   position: absolute;
-  width: 30px;
-  height: 90%;
-  background: #ececec;
-  top: 5%;
-  bottom: 0;
+  width: 25vw;
+  height: 20vw;
+  max-width: 450px;
+  max-height: 280px;
+  background-color: rgb(117, 218, 248);
+  border-radius: 0.75rem;
+  overflow: hidden;
+  top: 20px;
+  transform: translateX(-50%);
+  animation: aparecer 0.5s;
+}
+
+/* Contenido general*/
+.card-content {
+  opacity: 0;
+  display: none;
+}
+
+/* Posiciones */
+.card-fj {
+  left: 0%;
+  transform: translateX(-50%);
+}
+.card-informula {
   left: 50%;
   transform: translateX(-50%);
-  border: solid 3px #1d1d1b;
-  box-shadow: -4px 4px #1d1d1b;
+}
+.card-gesclub {
+  left: 100%;
+  transform: translateX(-50%);
 }
 
-.container {
-  padding: 15px 30px;
-  position: relative;
-  background: inherit;
-  width: 50%;
-}
-
-.container.left {
-  left: 0;
-}
-
-.container.right {
+/* General Activo con animacion*/
+.activo.card {
+  width: 90vw;
+  height: auto;
   left: 50%;
+  max-width: 90vw;
+  max-height: 2040px;
+  top: 330px;
+  z-index: 2;
+  transition: all 0.5s ease, top 0.5s ease, left 0.5s ease;
 }
 
-/* Linea X */
-.container::after {
-  content: "";
-  position: absolute;
-  width: 75px;
-  height: 30px;
-  top: calc(50% - 8px);
-  background: #ececec;
+/* Contenido y logotitulo activado */
+.activo .card-content {
+  display: flex;
+  opacity: 1;
+}
+.activo > .logotitulo img {
+  width: auto;
+  height: 70px;
+}
+.activo > .logotitulo {
+  flex-direction: column;
+  gap: 10px;
+}
+.activo > .logotitulo div {
+  flex: 1;
+}
+
+/* Tamaño de logo */
+.logotitulo div img {
+  width: 20vw;
+}
+
+/* Animacion quitar activo */
+/* .card:not(.activo) .card-content,
+.card:not(.activo) {
+  animation: aparecer 0.5s;
+  transform: translateX(-50%);
+} */
+
+/* Sombra hover */
+.card:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+@media (min-width: 768px) {
+  .activo > .logotitulo {
+    flex-direction: row;
+    flex-direction: row-reverse;
+  }
+}
+
+/* cosas nuevas 
+
+
+
+
+
+
+a
+
+
+*/
+
+.salir > .logotitulo img {
+  width: auto;
+  height: 70px;
+}
+
+.salir > .logotitulo {
+  flex-direction: column;
+  gap: 10px;
+}
+
+.salir > .logotitulo div {
+  flex: 1;
+}
+
+.salir.card {
+  width: 90vw;
+  height: auto;
+  left: 50%;
+  max-width: 90vw;
+  max-height: 2040px;
+  top: 330px;
   z-index: 1;
-  border: 3px #1d1d1b;
-  border-style: solid none solid none;
+
+  animation: desaparecer 0.3s ease-in-out forwards;
 }
 
-.container.left::after {
-  right: 12px;
-  box-shadow: -4px 4px #1d1d1b;
-}
-.container.right::after {
-  left: 12px;
-  box-shadow: 0px 4px #1d1d1b;
+.salir .card-content {
+  display: flex;
+  opacity: 1;
+  /* animation: replegar 0.5s ease-in-out forwards; */
 }
 
-.container .content {
-  position: relative;
+.salir > .logotitulo {
+  /* animation: replegar 0.5s ease-in-out forwards; */
 }
 
-/* md */
-@media (max-width: 767px) {
-  /* Linea Y */
-  .timeline::after {
-    left: 8%;
-    transform: translateX(-8%);
+@keyframes aparecer {
+  0% {
+    opacity: 0;
+    top: 20px;
+    transform: translateX(-50%) scale(1);
   }
-
-  .container {
-    width: 100%;
-    max-width: none;
-    padding-left: 25%;
-    padding-right: 0px;
-    left: 5%;
-    transform: translateX(-5%);
+  50% {
+    transform: translateX(-50%) scale(1.05);
   }
-
-  .container.right {
-    left: 0%;
+  100% {
+    opacity: 1;
+    transform: translateX(-50%) scale(1);
   }
+}
 
-  /* Linea X */
-  .container.left::after,
-  .container.right::after {
-    left: 16%;
-    z-index: 0;
+@keyframes desaparecer {
+  0% {
+    opacity: 1;
+    top: 330px;
+  }
+  100% {
+    opacity: 0;
+    top: 330px;
+  }
+}
+
+@media (min-width: 768px) {
+  .salir > .logotitulo {
+    flex-direction: row;
+    flex-direction: row-reverse;
   }
 }
