--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
   <app-header-nubes />
 
   <!-- Texto -->
-  <img src="images/afg.svg" alt="logo-header" class="w-60" />
+  <img src="images/afg.svg" alt="logo-header" class="w-60 select-none" />
   <h1 class="text-6xl font-bold">Adrián Ferradás Gutiérrez</h1>
 
   <h3
