--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,5 +1,59 @@
-<div class="bg-pink-300 w-[90vw] h-screen m-auto relative">
-  <div class="card card-fj absolute w-10 h-10 bg-red-600">FJ</div>
-  <div class="card card-informula absolute w-10 h-10 bg-red-600">Informula</div>
-  <div class="card card-gesclub absolute w-10 h-10 bg-red-600">Gesclub</div>
+<div class="bg-pink-300 w-full h-screen m-auto">
+  <!--  -->
+  <div class="flex justify-evenly p-4 gap-4">
+    <div
+      class="card card-fj w-100 h-60 rounded-3xl bg-purple-500 p-5 flex flex-col"
+      (click)="seleccionado('fj')"
+    >
+      <img
+        src="images/proyectos/fj-logo.svg"
+        alt="fj-logo"
+        class="object-cover w-auto max-h-35 m-auto"
+      />
+      <h3 class="text-center text-4xl bottom-0">FJ</h3>
+    </div>
+
+    <!-- Informula -->
+    <div
+      class="card card-fj w-100 h-60 rounded-3xl bg-purple-500 p-5 flex flex-col"
+      (click)="seleccionado('informula')"
+    >
+      <img
+        src="images/proyectos/informula-logo.svg"
+        alt="informula-logo"
+        class="object-cover w-auto max-h-35 m-auto"
+      />
+
+      <h3 class="text-center text-4xl bottom-0">Informula</h3>
+    </div>
+
+    <!-- Gesclub -->
+    <div
+      class="card card-fj w-100 h-60 rounded-3xl bg-purple-500 p-5 flex flex-col"
+      (click)="seleccionado('gesclub')"
+    >
+      <img
+        src="images/proyectos/gesclub-logo.svg"
+        alt="gesclub-logo"
+        class="object-cover w-auto max-h-35 m-auto"
+      />
+      <h3 class="text-center text-4xl bottom-0">Gesclub</h3>
+    </div>
+  </div>
+
+  <!-- Info -->
+  <app-proyectos-info [seleccionado]="nombreSeleccionado" [cerrar]="cerrar" />
 </div>
+<svg viewBox="0 0 1200 200" xmlns="http://www.w3.org/2000/svg">
+  <path fill="#0af" d="M0,100 C300,200 900,0 1200,100 L1200,200 L0,200 Z">
+    <animate
+      attributeName="d"
+      dur="5s"
+      repeatCount="indefinite"
+      values="
+        M0,100 C300,200 900,0 1200,100 L1200,200 L0,200 Z;
+        M0,120 C300,0 900,200 1200,120 L1200,200 L0,200 Z;
+        M0,100 C300,200 900,0 1200,100 L1200,200 L0,200 Z"
+    />
+  </path>
+</svg>
