--- a/src/app/components/pruebas/pruebas.component.css
+++ b/src/app/components/pruebas/pruebas.component.css
@@ -46,7 +46,7 @@ h3 {
   max-height: 2040px;
   top: 330px;
   z-index: 2;
-  transition: all 0.5s ease, top 0.5s ease, left 0.5s ease;
+  animation: aparecerRebote 0.2s ease-out forwards;
 }
 
 /* Contenido y logotitulo activado */
@@ -141,15 +141,9 @@ a
 @keyframes aparecer {
   0% {
     opacity: 0;
-    top: 20px;
-    transform: translateX(-50%) scale(1);
-  }
-  50% {
-    transform: translateX(-50%) scale(1.05);
   }
   100% {
     opacity: 1;
-    transform: translateX(-50%) scale(1);
   }
 }
 
@@ -168,5 +162,21 @@ a
   .salir > .logotitulo {
     flex-direction: row;
     flex-direction: row-reverse;
+  }
+}
+
+@keyframes aparecerRebote {
+  0% {
+    opacity: 0;
+    transform: translateX(-50%) scale(0.98);
+  }
+
+  50% {
+    opacity: 1;
+    transform: translateX(-50%) scale(1.01);
+  }
+
+  100% {
+    transform: translateX(-50%) scale(1);
   }
 }
